# GRAGC

./: README.md  clean_outputs.sh  meta.csv  pyproject.toml
configs/evocodebench/: create_ds.yml
configs/evocodebench/gnn/: greedy_deepseekv3.yml  greedy_gpt-oss-120b.yml  greedy_kimi-k2.5.yml  greedy_qwen2.5-72b.yml  greedy_qwen3-coder-480b.yml
configs/evocodebench/gnn_local_context/: greedy_deepseekv3.yml  greedy_gpt-oss-120b.yml  greedy_kimi-k2.5.yml  greedy_qwen2.5-72b.yml
configs/evocodebench/gnn_refined/: greedy_qwen2.5-72b.yml
configs/evocodebench/local_context/: greedy_deepseekv3.yml  greedy_gpt-oss-120b.yml  greedy_kimi-k2.5.yml  greedy_qwen2.5-72b.yml
configs/evocodebench/local_golden/: greedy_deepseekv3.yml  greedy_gpt-oss-120b.yml  greedy_qwen2.5-72b.yml
configs/evocodebench/without_context/: greedy_deepseekv3.yml  greedy_gpt-oss-120b.yml  greedy_kimi-k2.5.yml  greedy_qwen2.5-72b.yml
configs/repobench/: repobench_create_ds.yml
configs/swe_qa_bench/: create_ds.yml
configs/swe_qa_bench/gnn/: greedy.yml  greedy_deepseekv3.yml  greedy_gpt-oss-120b.yml  greedy_qwen2.5-72b.yml
ragc/: utils.py
ragc/datasets/: create_dataset.py  create_swe_qa_dataset.py  train_dataset.py
ragc/datatools/: flatten_docstring_cache.bash
ragc/graphs/: common.py  hetero_transforms.py  semantic_python_parser.py
ragc/llm/: huggingface.py  ollama.py  remote.py  types.py
ragc/retrieval/: gnn.py
ragc/simple_rag/: a.ipynb  dataset.py  faiss.py  pipeline.py
ragc/test/: clean.py  inference.py  swe_qa_bench.py  swe_qa_inference.py  test_config.py
ragc/train/: evaluate.py  finetune_trainer.py  train_transforms.py  unsupervised_trainer.py
ragc/train/gnn/: ablation_study.py  (+3 more)
run/: swe_qa_create_ds.sh  swe_qa_inference.sh
scripts/: run_evocodebench.py
(+4 files in other folders)
