[project]
name = "ragc"
version = "0.1.0"
description = ""
authors = [
    { name = "KonstFed" },
    { name = "Boris" },
]
requires-python = "==3.11.*"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "semantic_parser",
    "tqdm>=4,<5",
    "pandas>=1.5,<2",
    "numpy>=1.0,<2",
    "jupyter>=1.1.1,<2",
    "networkx>=3.4.2,<4",
    "matplotlib>=3.10.0,<4",
    "scipy>=1.15.1,<2",
    "plotly>=5.24.1,<6",
    "code2flow>=2.5.1,<3",
    "ipykernel>=6.29.5,<7",
    "pydantic>=2.10.6,<3",
    "ollama>=0.4.7,<0.5",
    "openai>=1.0.0,<2",
    "python-dotenv>=1.0.0,<2",
    "pydot>=3.0.4,<4",
    "datasets>=3.3.2,<4",
    "ruff>=0.9.9,<0.10",
    "torch>=2.6.0,<3",
    "torch-geometric>=2.6.1,<3",
    "pyyaml>=6.0.2,<7",
    "pyvis>=0.3.2,<0.4",
    "pcst-fast>=1.0.10,<2",
    "transformers>=4.50.1,<5",
    "black>=25.1.0,<26",
    "accelerate>=0.26.0",
    "scikit-learn>=1.6.1,<2",
]

[tool.uv.sources]
semantic_parser = { git = "https://github.com/Andrchest/SemanticGraphParser.git", branch = "costil-posix" }

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]  # Configuration for Ruff

lint.select = [
    "ALL"
]

lint.ignore = [
    "ANN003",
    "N805",
    "ANN101",
    "RUF002",
    "RUF003",
    "EM",
    "FBT",
    "TRY003",
    "D100",
    "D104",
    "ISC003",
    "INP001",
    "D105",
    "F405",
    "G004",
    "S113",
    "ANN204",
    "SIM117",
    "RUF001",
    "PT019",
    "S108",
    "FIX002",
    "RET504",
    "D107"
]

line-length = 120  # Set the maximum line length
